v0.1.0/_sources/gallery/index.rst.txt
:orphan:



.. _sphx_glr_gallery:

.. _gallery:

Gallery
=======

This gallery contains examples of what PyGMT can do. Click on any example to see the
code used to generate it.


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_coast:

Coastlines and boundaries
-------------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The borders argument of pygmt.Figure.coast specifies levels of political boundaries to plot and...">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_borders_thumb.png

     :ref:`sphx_glr_gallery_coast_borders.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/borders

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The land and water arguments of pygmt.Figure.coast specify a color to fill in the land and wate...">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_land_and_water_thumb.png

     :ref:`sphx_glr_gallery_coast_land_and_water.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/land_and_water

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use pygmt.Figure.coast to display shorelines as black lines. ">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_shorelines_thumb.png

     :ref:`sphx_glr_gallery_coast_shorelines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/shorelines
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_plot:

Plotting map items
------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.colorbar method creates a color scalebar. We must specify the colormap via the...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_colorbar_thumb.png

     :ref:`sphx_glr_gallery_plot_colorbar.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/colorbar

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.legend method can automatically create a legend for symbols plotted using pygm...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_legend_thumb.png

     :ref:`sphx_glr_gallery_plot_legend.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/legend

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.plot method can plot points. We must specify the plot symbol and size through ...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_points_thumb.png

     :ref:`sphx_glr_gallery_plot_points.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/points
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_grid:

Grids
-----



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.grdtrack function samples a raster grid&#x27;s value along specified points. We will need ...">

.. only:: html

 .. figure:: /gallery/grid/images/thumb/sphx_glr_track_sampling_thumb.png

     :ref:`sphx_glr_gallery_grid_track_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/grid/track_sampling
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
